# min-devkit-mod

./: .gitmodules  CMakeLists.txt
cmake/: add_project.cmake
source/min-api/: CMakeLists.txt
source/min-api/max-sdk-base/: CMakeLists.txt
source/min-api/test/: min-object-unittest.cmake
source/min-lib/: CMakeLists.txt
source/min-lib/test/: min-lib-unittest.cmake
source/projects/libs/Butterfly_Audio_Library/: CMakeLists.txt
source/projects/libs/Butterfly_Audio_Library/src/math/: CMakeLists.txt
source/projects/libs/Butterfly_Audio_Library/src/math/src/: decibel.h  fft.h  fixed_point.h  interpolation.h  matrix.h  optimized_math.h  signal_generators.h
source/projects/libs/Butterfly_Audio_Library/src/modulation/: CMakeLists.txt
source/projects/libs/Butterfly_Audio_Library/src/modulation/src/: lfo.h  modulation_routing_utilities.h
source/projects/libs/Butterfly_Audio_Library/src/synth/: CMakeLists.txt
source/projects/libs/Butterfly_Audio_Library/src/synth/src/: wavetable.h  wavetable_oscillator.h
source/projects/libs/Butterfly_Audio_Library/src/utilities/: CMakeLists.txt
source/projects/libs/Butterfly_Audio_Library/src/utilities/src/: ramped_value.h  stable_id_array.h  stable_id_vector.h
source/projects/libs/Butterfly_Audio_Library/src/wave/: CMakeLists.txt
source/projects/libs/Butterfly_Audio_Library/src/wave/src/: antialiase.h  biquad_filter.h  moog_filter.h  pitch_detection.h  waveform_processing.h
source/projects/mc.min.info_tilde/: CMakeLists.txt  asd.cpp  mc.min.info_tilde.cpp
source/projects/min.beat.pattern/: CMakeLists.txt
source/projects/min.beat.random/: CMakeLists.txt
source/projects/min.dict.join/: CMakeLists.txt
source/projects/min.textslider/: CMakeLists.txt
